--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,12 +10,12 @@ LABEL malice.plugin.docker.engine="*"
 ENV GO_VERSION 1.8.3
 
 # Install Requirements
+COPY sav-linux-free-9.tgz /tmp/sav-linux-free-9.tgz
 RUN buildDeps='ca-certificates wget' \
   && DEBIAN_FRONTEND=noninteractive apt-get update -qq \
   && apt-get install -yq $buildDeps \
   && echo "===> Install Sophos..." \
   && cd /tmp \
-  && wget -q https://github.com/maliceio/malice-av/raw/master/sophos/sav-linux-free-9.tgz \
   && tar xzvf sav-linux-free-9.tgz \
   && ./sophos-av/install.sh /opt/sophos --update-free --acceptlicence --autostart=False --enableOnBoot=False --automatic --ignore-existing-installation --update-source-type=s \
   && echo "===> Update Sophos..." \
