--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           name: Build application Docker image
           command: |
             docker build --cache-from=app -t app .
+            docker image list app
       - run:
           name: Save Docker image layer cache
           command: |
