--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /app
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: docker:17.06.0-ce-git
     steps:
       - checkout
       - setup_remote_docker
@@ -11,10 +11,19 @@ jobs:
           name: Install dependencies
           command: |
             apk add --no-cache \
-              py-pip=9.0.0-r1
+              py2-pip=9.0.1-r1 curl=7.54.0-r0 jq
             pip install \
-              docker-compose==1.12.0 \
-              awscli==1.11.76
+              docker-compose==1.14.0 \
+              awscli==1.11.112 \
+              httpie
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.05.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
@@ -28,8 +37,15 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
+            docker version
             docker build --cache-from=app -t app .
-            docker image list app
+      - run:
+          name: Get Docker image size
+          command: |
+            mkdir /tmp/artifacts;
+            docker images --format "{{.Size}}" app > /tmp/artifacts/size;
+      - store_artifacts:
+          path: /tmp/artifacts
       - run:
           name: Save Docker image layer cache
           command: |
@@ -39,6 +55,15 @@ jobs:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
             - /caches/app.tar
+      - run:
+          name: Run tests
+          command: |
+            set -x
+            curl -L -o /tmp/sample https://github.com/maliceio/malice-av/raw/master/samples/befb88b89c2eb401900a68e9f5b78764203f2b48264fcc3f7121bf04a57fd408
+            docker create -v /malware --name malvol alpine:3.6 /bin/true
+            docker cp /tmp/sample malvol:/malware
+            docker run --rm --volumes-from malvol app -V sample | jq .
+            docker run --rm --volumes-from malvol app -t sample
       - run:
           name: Run tests
           command: |
