--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,7 @@ jobs:
       - run:
           name: Run tests
           command: |
+            sudo sysctl -w vm.max_map_count=262144
             docker-compose -f ./docker-compose.ci.yml up
       # - deploy:
       #     name: Push application Docker image
