--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           paths:
             - /caches/app.tar
       - run:
-          name: Run tests
+          name: Run malware test
           command: |
             set -x
             curl -L -o /tmp/sample https://github.com/maliceio/malice-av/raw/master/samples/befb88b89c2eb401900a68e9f5b78764203f2b48264fcc3f7121bf04a57fd408
@@ -65,7 +65,7 @@ jobs:
             docker run --rm --volumes-from malvol app -V sample | jq .
             docker run --rm --volumes-from malvol app -t sample
       - run:
-          name: Run tests
+          name: Run elasticsearch test
           command: |
             sudo sysctl -w vm.max_map_count=262144
             docker-compose -f ./docker-compose.ci.yml up
